# nvxz.flags

./: .gitignore  README.md  nixpacks.toml  pyproject.toml
src/api/: exceptions.py  main.py  naive.py  schemas.py
src/api/core/: auth.py  db.py  settings.py
src/api/crud/: __init__.py  flags.py  projects.py  sessions.py  users.py
src/api/routers/: auth.py  flags.py  projects.py  users.py
src/api/scripts/: init_db.py
