[project]
name = "nvxz-flags"
version = "0.1.0"
description = "Simple feature flag server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi[standard]>=0.115.7",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.7.1",
]

[project.scripts]
init-db = "api.scripts.init_db:main"


[tool.setuptools.packages.find]
where = ["src"]
